--- a/templates/base.html
+++ b/templates/base.html
@@ -114,12 +114,16 @@
                     <div class="dropdown text-end">
                         <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle"
                             data-bs-toggle="dropdown" aria-expanded="false">
+                            {% if user.avatar%}
+                                 <img src="{{ user.avatar }}" alt="employer" width="32" height="32" class="rounded-circle">
+                            {% else %}
                             {% if user.type == 2 %}
                                 <!-- Employer default photo -->
                                 <img src="{% static 'image\default-employer.jpg' %}" alt="employer" width="32" height="32" class="rounded-circle">
                             {% else %}
                                 <!-- Job seeker default photo -->
                                 <img src="{% static 'image\default-user.jpg' %}" alt="user" width="32" height="32" class="rounded-circle">
+                            {% endif %}
                             {% endif %}
                         </a>
                         <ul class="dropdown-menu text-small">
@@ -135,7 +139,7 @@
 
                     <!--   未登录，显示login和register     -->
                     {% else %}
-                    <div class="col-md-4 text-end">
+                    <div class="col-md-4 d-flex justify-content-end align-items-center">
                         <a href="{% url 'login' %}" class="btn btn-dark" role="button">Login</a>
                         <a href="{% url 'register' user_type=1 %}" class="btn btn-outline-secondary" role="button">Register</a>
                         <!-- 注册的url后续需修改 -->
