--- a/templates/login.html
+++ b/templates/login.html
@@ -32,7 +32,7 @@
             <div class="form-actions">
                 <input type="submit" value="Sign In" class="btn" />
                 <input type="button" value="Register" class="btn" onclick="location.href='{% url 'register' user_type=1 %}';" />
-				<p>Forget the <a href="">password</a>?</p>
+				<!-- <p>Forget the <a href="">password</a>?</p> -->
             </div>
         </form>
     </div>
