--- a/templates/employerInfo.html
+++ b/templates/employerInfo.html
@@ -129,6 +129,9 @@ select {
                 max-height:100%;
                 height:auto;
                 object-fit:contain;
+                border-radius: 5px;
+                border: 3px solid #098faae1;
+                box-shadow: 0 0 5px rgba(0,0,0,0.2);
 }
 </style>
 
@@ -182,7 +185,7 @@ select {
 
                             <!-- Modal Footer -->
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                                 <button type="submit" class="btn btn-primary">Submit</button>
                             </div>
                         </form>
@@ -215,7 +218,7 @@ select {
 
                             <!-- Modal Footer -->
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                                 <button type="button" class="btn btn-primary" onclick="handleSubmitChangePassword()">Submit</button>
                             </div>
                         </form>
