--- a/templates/job-detail.html
+++ b/templates/job-detail.html
@@ -47,6 +47,9 @@
                 max-height:100%;
                 height:auto;
                 object-fit:contain;
+                border-radius: 5px;
+                border: 3px solid #098faae1;
+                box-shadow: 0 0 5px rgba(0,0,0,0.2);
             }
             .fixed-sidebar {
                 position: fixed;
