--- a/templates/jobSeekerInfo.html
+++ b/templates/jobSeekerInfo.html
@@ -72,6 +72,9 @@ Job Seeker Information
                 max-height:100%;
                 height:auto;
                 object-fit:contain;
+                border-radius: 5px;
+                border: 3px solid #098faae1;
+                box-shadow: 0 0 5px rgba(0,0,0,0.2);
     }
 </style>
 
@@ -124,7 +127,7 @@ Job Seeker Information
 
                             <!-- Modal Footer -->
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                                 <button type="submit" class="btn btn-primary">Submit</button>
                             </div>
                         </form>
@@ -158,7 +161,7 @@ Job Seeker Information
 
                             <!-- Modal Footer -->
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                                 <button type="button" class="btn btn-primary" onclick="handleSubmitChangePassword()">Submit</button>
                             </div>
                         </form>
